# PowLootMachine-JustPlay

./: Cargo.toml  PREINSTALL.txt  README.md  bridge.js  build.rs
.github/workflows/: release.yml
PowLoot/static/wasm/: powloot_wasm.wasm-0002330e
native/: argon2_cuda_wrapper.cpp  argon2_cuda_wrapper.h
native/powloot_cuda/: CMakeLists.txt  powloot_cuda.cu  powloot_cuda.h
src/: gpu.rs  main.rs
